CORE-895 Fix overlapping select items with another select (#66)

--- a/Select/Select.css
+++ b/Select/Select.css
@@ -1,7 +1,6 @@
 .container {
   width: 100%;
   font: var(--small);
-  z-index: 1;
 }
 
 /*
